common/deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ui-ingress
spec:
  rules:
  - host: 10.0.0.180.nip.io
    http:
      paths:
      - backend:
          serviceName: react-ui
          servicePort: 3000
        path: /
      - backend:
          serviceName: golang-api
          servicePort: 3000
        path: /golang
      - backend:
          serviceName: nodejs-api
          servicePort: 3000
        path: /nodejs
